--- a/assets/style.css
+++ b/assets/style.css
@@ -139,7 +139,7 @@ p {
   margin: 20px;
 }
 
-/* @media screen and (min-width: 270px) {
+@media screen and (min-width: 270px) {
   #description-card {
     display: flex;
     flex-direction: column;
@@ -164,14 +164,12 @@ p {
   #shop {
     order: -1;
   }
-  section {
-    width: 100%;
-  }
+
   #card-conteiner img {
     width: auto;
   }
-} */
-/* @media screen and (min-width: 700px) {
+}
+@media screen and (min-width: 700px) {
   #description-card {
     display: flex;
     flex-direction: column;
@@ -187,4 +185,29 @@ p {
   nav li {
     padding: 0;
   }
-} */
+}
+
+@media screen and (min-width: 1200px) {
+  #button-card-conteiner {
+    display: flex;
+    justify-content: center;
+  }
+
+  ul {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  #shop {
+    order: 0;
+  }
+
+  #card-conteiner {
+    margin: 20px;
+  }
+
+  #description-card {
+    flex-direction: row;
+  }
+}
